feat: 調整 member model、增加 auth 8 支 api、撰寫 swagger、掛載到 app
1. 調整 member model
2. 增加 auth 8 支 api > 註冊會員、會員登入、檢查帳號是否可以使用、檢查帳號是否重複、寄送更改密碼郵件、重設密碼、google 登入、google 登入 callback
3. 撰寫 swagger
4. 掛載到 app
